--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "povery-cli",
-  "version": "0.0.7",
+  "version": "0.0.10",
   "author": "Oscar Chinellato",
   "description": "Povery - The CLI",
   "main": "index.js",
@@ -12,25 +12,28 @@
   "bin": "./cli.mjs",
   "license": "MIT",
   "dependencies": {
-    "ts-node": "^10.9.1",
-    "rimraf": "^3.0.2",
-    "ora": "^6.1.2",
-    "fs-extra": "^10.1.0",
-    "inquirer": "^9.0.0",
+    "@types/fs-extra": "^9.0.13",
+    "@types/serverless": "^3.12.9",
     "adm-zip": "^0.5.9",
+    "aws-sdk": "^2.1173.0",
     "chalk": "^5.0.1",
     "commander": "^9.3.0",
-    "@types/serverless": "^3.12.9",
-    "@types/fs-extra": "^9.0.13",
+    "date-fns": "^2.29.3",
+    "dotenv": "^16.0.3",
+    "fs-extra": "^10.1.0",
+    "inquirer": "^9.0.0",
+    "joi": "^17.6.0",
+    "json5": "^2.2.3",
+    "jsonschema": "^1.4.1",
+    "lodash": "^4.17.21",
+    "ora": "^6.1.2",
+    "rimraf": "^3.0.2",
     "serverless": "^3.26.0",
     "serverless-offline": "^12.0.3",
     "serverless-plugin-typescript": "^2.1.2",
-    "dotenv": "^16.0.3",
-    "aws-sdk": "^2.1173.0",
-    "date-fns": "^2.29.3",
-    "joi": "^17.6.0",
-    "jsonschema": "^1.4.1",
-    "lodash": "^4.17.21"
+    "serverless-tscpaths": "^0.0.8",
+    "ts-node": "^10.9.1",
+    "tsc-alias": "^1.8.2"
   },
   "devDependencies": {
     "@types/jest": "^28.1.8",
