--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "povery-cli",
-  "version": "0.0.10",
+  "version": "0.0.11",
   "author": "Oscar Chinellato",
   "description": "Povery - The CLI",
   "main": "index.js",
@@ -33,7 +33,8 @@
     "serverless-plugin-typescript": "^2.1.2",
     "serverless-tscpaths": "^0.0.8",
     "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.2"
+    "tsc-alias": "^1.8.2",
+    "tsconfig-paths": "^4.1.2"
   },
   "devDependencies": {
     "@types/jest": "^28.1.8",
