--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "povery-cli",
-  "version": "0.0.14",
+  "version": "0.0.15",
   "author": "Oscar Chinellato",
   "description": "Povery - The CLI",
   "main": "index.js",
@@ -36,14 +36,14 @@
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.2",
-    "esbuild": "^0.17.14"
+    "esbuild": "^0.17.14",
+    "typescript": "^4.9.4"
   },
   "devDependencies": {
     "@types/jest": "^28.1.8",
     "@types/node": "^18.11.18",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
-    "ts-jest": "^29.0.3",
-    "typescript": "^4.9.4"
+    "ts-jest": "^29.0.3"
   }
 }
