--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "povery-cli",
-  "version": "0.0.15",
+  "version": "0.0.17",
   "author": "Oscar Chinellato",
   "description": "Povery - The CLI",
   "main": "index.js",
@@ -13,14 +13,17 @@
   "bin": "./cli.mjs",
   "license": "MIT",
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.301.0",
+    "@aws-sdk/client-s3": "^3.301.0",
+    "@aws-sdk/lib-storage": "^3.301.0",
     "@types/fs-extra": "^9.0.13",
     "@types/serverless": "^3.12.9",
     "adm-zip": "^0.5.9",
-    "aws-sdk": "^2.1173.0",
     "chalk": "^5.0.1",
     "commander": "^9.3.0",
     "date-fns": "^2.29.3",
     "dotenv": "^16.0.3",
+    "esbuild": "^0.17.14",
     "fs-extra": "^10.1.0",
     "inquirer": "^9.0.0",
     "joi": "^17.6.0",
@@ -36,7 +39,6 @@
     "ts-node": "^10.9.1",
     "tsc-alias": "^1.8.2",
     "tsconfig-paths": "^4.1.2",
-    "esbuild": "^0.17.14",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
