--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "typescript": "^4.9.4"
   },
   "devDependencies": {
+    "@types/inquirer": "^9.0.3",
     "@types/jest": "^28.1.8",
     "@types/node": "^18.11.18",
+    "@types/rimraf": "^4.0.5",
     "jest": "^29.3.1",
     "prettier": "^2.7.1",
     "ts-jest": "^29.0.3"
