--- a/package.json
+++ b/package.json
@@ -6,48 +6,48 @@
   "main": "index.js",
   "scripts": {
     "test": "NODE_ENV=development jest",
-    "build": "rimraf ./dist && tsc --project tsconfig.build.json --watch"
+    "build": "rimraf ./dist && tsc --project tsconfig.build.json --skipLibCheck"
   },
   "repository": "https://github.com/sickOscar/povery-cli",
   "keywords": [],
   "bin": "./cli.mjs",
   "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-lambda": "^3.301.0",
-    "@aws-sdk/client-s3": "^3.301.0",
-    "@aws-sdk/lib-storage": "^3.301.0",
-    "@types/fs-extra": "^9.0.13",
-    "@types/serverless": "^3.12.9",
-    "adm-zip": "^0.5.9",
-    "chalk": "^5.0.1",
-    "commander": "^9.3.0",
-    "date-fns": "^2.29.3",
-    "dotenv": "^16.0.3",
-    "esbuild": "^0.17.14",
-    "fs-extra": "^10.1.0",
-    "inquirer": "^9.0.0",
-    "joi": "^17.6.0",
+    "@aws-sdk/client-lambda": "^3.758.0",
+    "@aws-sdk/client-s3": "^3.758.0",
+    "@aws-sdk/lib-storage": "^3.758.0",
+    "@types/fs-extra": "^11.0.4",
+    "@types/serverless": "^3.12.27",
+    "adm-zip": "^0.5.16",
+    "chalk": "^5.4.1",
+    "commander": "^12.1.0",
+    "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
+    "esbuild": "^0.20.2",
+    "fs-extra": "^11.3.0",
+    "inquirer": "^9.3.7",
+    "joi": "^17.13.3",
     "json5": "^2.2.3",
-    "jsonschema": "^1.4.1",
+    "jsonschema": "^1.5.0",
     "lodash": "^4.17.21",
-    "ora": "^6.1.2",
-    "rimraf": "^3.0.2",
-    "serverless": "^3.26.0",
-    "serverless-offline": "^12.0.3",
-    "serverless-plugin-typescript": "^2.1.2",
+    "ora": "^8.2.0",
+    "rimraf": "^5.0.10",
+    "serverless": "^3.40.0",
+    "serverless-offline": "^13.9.0",
+    "serverless-plugin-typescript": "^2.1.5",
     "serverless-tscpaths": "^0.0.8",
-    "ts-node": "^10.9.1",
-    "tsc-alias": "^1.8.2",
-    "tsconfig-paths": "^4.1.2",
-    "typescript": "^4.9.4"
+    "ts-node": "^10.9.2",
+    "tsc-alias": "^1.8.11",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.8.2"
   },
   "devDependencies": {
-    "@types/inquirer": "^9.0.3",
-    "@types/jest": "^28.1.8",
-    "@types/node": "^18.11.18",
+    "@types/inquirer": "^9.0.7",
+    "@types/jest": "^29.5.14",
+    "@types/node": "^20.17.24",
     "@types/rimraf": "^4.0.5",
-    "jest": "^29.3.1",
-    "prettier": "^2.7.1",
-    "ts-jest": "^29.0.3"
+    "jest": "^29.7.0",
+    "prettier": "^3.5.3",
+    "ts-jest": "^29.2.6"
   }
 }
